# friendly-parakeet

./: .gitattributes  .gitignore  .mcp.json  AUBIO_OPTIMIZATION_PLAN.md  CHANGELOG.md  CMakeLists.txt  COMPONENT_CLEANUP_TEST_PLAN.md  README.md  RGUILAYOUT_INTEGRATION_PLAN.md  build.sh  build_cmake.txt  decisions.md  index.html  index.js  index.wasm  loop.md  package-lock.json  packages.config  run.sh  run_bad.sh  run_good.sh  run_pro.sh  sw.js  vcpkg.json
.github/: copilot-instructions.md  lsp.json
.squad/: ARCHIVAL_STATUS.md  ROUND10_HEALTH_REPORT.txt  ROUND11_HEALTH_REPORT.txt  ROUND12_HEALTH_REPORT.txt  ROUND13_HEALTH_REPORT.txt  ROUND14_HEALTH_REPORT.txt  ROUND15_HEALTH_REPORT.txt  ROUND16_HEALTH_REPORT.txt  ROUND17_HEALTH_REPORT.txt  ROUND6_HEALTH_REPORT.txt  ROUND8_HEALTH_REPORT.txt  ROUND9_HEALTH_REPORT.txt  SCRIBE_HEALTH_REPORT_2026-05-04_FINAL.txt  SCRIBE_HEALTH_REPORT_2026-05-04_SESSION.txt  SCRIBE_HEALTH_REPORT_2026-05-06.txt  SCRIBE_HEALTH_REPORT_2026-05-06_SESSION_FINAL.txt  SCRIBE_HEALTH_REPORT_SESSION_FINAL.txt  SCRIBE_SESSION_REPORT.txt  SCRIBE_SESSION_REPORT_2026-05-04.txt  commit-msg.txt  config.json  decisions-archive.md  decisions.md  orchestration-log.md  raylib_audit_raw.txt  routing.md  team.md
.superset/: config.json
1198-unwrap-int8-lane-wrappers/: index.js  index.wasm  sw.js
1202-pr-g-eradicate-gamephase-enum/: index.wasm  sw.js
1268-fix-dispatcher-connection-teardown-uaf/: index.wasm  sw.js
1277-existential-menu-press-events/: index.js  index.wasm  sw.js
1279-eradicate-direction-if-ladders/: index.js  index.wasm  sw.js
1287-paused-entity-pilot/: index.js  index.wasm  sw.js
1295-settings-migration/: index.js  index.wasm  sw.js
1325-relocate-rguilayout-codegen/: index.wasm  sw.js
1327-settings-bind-slotrow-table/: index.wasm  sw.js
1329-binder-odr-prefix/: index.wasm  sw.js
1331-approach-ring-visible-tag/: index.wasm  sw.js
1333-tests-level-select-and-gameplay-hud-bind/: index.wasm  sw.js
1338-join-app-dir-helper/: index.wasm  sw.js
1428-audio-pipeline-status-banner/: index.wasm  sw.js
1430-game-over-bind-reason-fold/: index.wasm  sw.js
1431-tutorial-dodge-hint-test-comment/: index.wasm  sw.js
1436-fold-scoreboard-int-binders/: index.wasm  sw.js
1440-fold-popup-display-init/: index.wasm  sw.js
1498-energy-system-inline-request-energy-depleted-game-over/: index.wasm  sw.js
1546-inline-erase-end-choice-tags/: index.wasm  sw.js
1563-inline-next-noise/: index.js  index.wasm  sw.js
1564-inline-shape-meshes-helpers/: index.wasm  sw.js
1565-inline-count-mesh-children-of/: index.wasm  sw.js
1638-inline-floor-render-helpers/: index.wasm  sw.js
app/: .allowed-enums.txt  beat_map_loader.cpp  beat_map_loader.h  bitmap_font.h  constants.h  enum_names.h  file_logger.cpp  file_logger.h  game_loop.cpp  game_loop.h  main.cpp  perspective.cpp  perspective.h  platform.h  platform_display.cpp  platform_display.h  platform_utils.h  raygui.h  session_logger.cpp  session_logger.h  shape_vertices.h  sw.js  text_renderer.cpp  text_renderer.h  version.h.in
audio-folder-collapse-1200/: index.wasm  sw.js
audit-autonomous-quality-loop/: index.js  index.wasm  sw.js
audit-autonomous-quality-loop-10/: index.wasm  sw.js
audit-autonomous-quality-loop-11/: index.js  index.wasm  sw.js
audit-autonomous-quality-loop-12/: index.js  index.wasm  sw.js
audit-autonomous-quality-loop-13/: index.wasm  sw.js
audit-autonomous-quality-loop-2/: index.wasm  sw.js
audit-autonomous-quality-loop-3/: index.wasm  sw.js
audit-autonomous-quality-loop-4/: index.js  index.wasm  sw.js
audit-autonomous-quality-loop-5/: index.js  index.wasm  sw.js
audit-autonomous-quality-loop-6/: index.js  index.wasm  sw.js
audit-autonomous-quality-loop-7/: index.wasm  sw.js
audit-autonomous-quality-loop-8/: index.js  index.wasm  sw.js
audit-autonomous-quality-loop-9/: index.wasm  sw.js
beatmap-integrated-quality-onset/: index.wasm  sw.js
beatmap-onset-obstacle-spike/: index.wasm  sw.js
beatmap-quality-improvements/: index.js  index.wasm  sw.js
benchmarks/: bench_file_logger.cpp  bench_perspective.cpp  bench_systems.cpp
build_test_check/: CMakeCache.txt
chore-1472-drop-wasm-unset-helpers/: index.wasm  sw.js
chore-1473-drop-draw-helpers/: index.wasm  sw.js
chore-1476-inline-test-player-helpers/: index.wasm  sw.js
chore-1600-inline-player-matches-required-shape/: index.wasm  sw.js
chore-1602-inline-find-touch-slot/: index.wasm  sw.js
chore-1605-inline-has-active-touch-in-zone/: index.wasm  sw.js
chore-1606-inline-load-runtime-beat-map/: index.wasm  sw.js
chore-1636-inline-popup-font-for-size/: index.wasm  sw.js
chore-collapse-rendering-folder-1223/: index.wasm  sw.js
chore-inline-touch-id-is-current-1604/: index.wasm  sw.js
chore-issue-1206-drop-msvc-build/: index.wasm  sw.js
chore-lane-push-removal/: index.js  index.wasm  sw.js
chore-move-level-content-config-to-util-1232/: index.wasm  sw.js
chore-move-screen-to-virtual-out-of-components/: index.wasm  sw.js
chore-squad-housekeeping/: index.wasm  sw.js
cleanup-1136-drop-legacy-lane-fixture-helper/: index.wasm  sw.js
cleanup-1169-drop-stale-archetype-comment/: index.wasm  sw.js
cleanup-1170-drop-redundant-persistence-include/: index.wasm  sw.js
cleanup-1414-dedup-kind-string-predicate/: index.wasm  sw.js
cleanup-1416-schedule-bin-helper/: index.wasm  sw.js
cleanup-1420-collapse-null-hexagon-sinks/: index.wasm  sw.js
cleanup-1456-shape-field-sink-template/: index.js  index.wasm  sw.js
cleanup-1457-stale-controller-refs/: index.wasm  sw.js
cleanup-1460-stale-history-attribution-refs/: index.wasm  sw.js
cleanup-1462-drop-scoring-ctx-getters/: index.wasm  sw.js
cleanup-1464-drop-stale-screen-controllers-attribution/: index.wasm  sw.js
cleanup-1466-drop-scratch-for-wrappers/: index.wasm  sw.js
cleanup-1478-energy-bar-helpers/: index.wasm  sw.js
cleanup-1480-gameplay-capacity-inline/: index.wasm  sw.js
cleanup-1481-warm-audio-haptic-inline/: index.wasm  sw.js
cleanup-1482-end-screen-apply-end-choice-fold/: index.wasm  sw.js
(+2059 files in other folders)
